crates/glyph-cli/tests/corpus/valid/freeform_multi_section.glyph
skill demo()
    description: "Demo skill with two freeform sections."
    quality:
        require accuracy
        "Prefer minimal diffs."
    risks:
        "Long-running operations may time out."
        avoid silent_failures
    flow:
        "Investigate."
