crates/glyph-cli/tests/corpus/invalid/freeform_unknown_marker.glyph
skill demo()
    description: "Demo."
    quality:
        prefer accuracy
    flow:
        "Do."
